--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: '>=2.8.1 <3.0.0'
 
 dependencies:
- 
+  convert: '^2.0.1'
+  dart_style: '^1.0.10'
   http: ^0.12.2
-  safe_config: ^2.0.2
+  json_ast: '^1.0.5'
+  #safe_config: ^2.0.2
 
 #  path: ^1.7.0
 
